<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:layout_marginLeft="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@drawable/light_gray" />

    <ImageButton
        android:id="@+id/buttonQuickAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="23dp"
        android:background="@null"
        android:src="@drawable/img_properties" android:contentDescription="@string/menu"/>

    <ImageButton
        android:id="@+id/btn_examlist_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="23dp"
        android:layout_toLeftOf="@+id/buttonQuickAction"
        android:background="@null"
        android:src="@drawable/img_start" android:contentDescription="@string/start"/>
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:src="@drawable/img_strip_blue" android:contentDescription="@string/_"/>

</RelativeLayout>